// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MethodDeclaration duplicate params 1`] = `
"// fakeid
dividerImageForLeftSegmentState_rightSegmentState(state: cocoascript.UIControlState, state1: cocoascript.UIControlState):cocoascript.UIImage;"
`;

exports[`MethodDeclaration multiple params 1`] = `
"// fakeid
addSubview_positioned_relativeTo(view: cocoascript.NSView, place: cocoascript.NSWindowOrderingMode, otherView: cocoascript.NSView):void;"
`;

exports[`MethodDeclaration simple method 1`] = `
"// fakeid
initWithFrame(frameRect: cocoascript.NSRect):cocoascript.NSView;"
`;

exports[`MethodDeclaration with nullable 1`] = `
"// fakeid
typeOfFile_error(absoluteFilePath: cocoascript.NSString, outError: cocoascript.NSError):cocoascript.NSString;"
`;
